CSS: Fix VN description overflow

--- a/css/v2.css
+++ b/css/v2.css
@@ -496,7 +496,7 @@ div.vnimg                     { float: left; width: 250px; margin: 0 10px; }
 div.vnimg p                   { text-align: center; padding: 0px; margin: 0; }
 div.vndetails h2              { margin: 5px 0 0 0; }
 .vndesc p                     { padding: 0 0 0 5px; }
-div.vndetails > table         { float: left; width: 500px; }
+div.vndetails > table         { float: left; width: 100%; max-width: 500px; }
 div.vndetails > table td.key  { width: 90px; }
 div.vndetails > table dt      { float: left; font-style: italic; }
 div.vndetails > table dd      { margin-left: 90px; }
